Consolidate vector benchmark entry points